# ChessMate

./: .env.example  Dockerfile  README.md  docker-compose.yaml
chat/: app.py  pyproject.toml
chat/utils/: chess_utils.py  db_utils.py  llm_utils.py  setup.py
monitoring/grafana/: dashboard.json
