[project]
name = "chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Amit-kr26",email = "amitkr97531@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-chess (>=1.999,<2.0)",
    "openai (>=1.84.0,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "elasticsearch (>=9.0.2,<10.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "chess (>=1.11.2,<2.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
